[gd_scene load_steps=12 format=2]

[ext_resource path="res://desktop/desktop.gd" type="Script" id=1]
[ext_resource path="res://desktop/terminal_intro_display.gd" type="Script" id=2]
[ext_resource path="res://desktop/coffee_overlay_display.gd" type="Script" id=3]
[ext_resource path="res://helpers/terminal_text.gd" type="Script" id=4]
[ext_resource path="res://helpers/default_button.gd" type="Script" id=5]
[ext_resource path="res://tasks/TaskContainer.tscn" type="PackedScene" id=6]
[ext_resource path="res://network/Network.tscn" type="PackedScene" id=7]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="Theme" id=6]
RichTextLabel/styles/normal = SubResource( 5 )

[sub_resource type="Animation" id=4]
resource_name = "MinimiseTerminal"
length = 1.25
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationNode/TerminalAnimationPlayer/TerminalDisplay:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ), Vector2( 0.01, 0.01 ), Vector2( 0.01, 0.01 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("AnimationNode/TerminalAnimationPlayer/TerminalDisplay")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hide"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "ShowTerminal"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationNode/TerminalAnimationPlayer/TerminalDisplay:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("AnimationNode/TerminalAnimationPlayer/TerminalDisplay")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "show"
} ]
}

[node name="Desktop" type="Node2D"]
script = ExtResource( 1 )

[node name="IntroNode" type="Node2D" parent="."]
position = Vector2( -4, -1 )
z_index = 1

[node name="TerminalIntroDisplay" type="RichTextLabel" parent="IntroNode"]
margin_left = -1.0
margin_top = 13.9772
margin_right = 1917.0
margin_bottom = 1050.98
rect_scale = Vector2( 0.997697, 1.0253 )
rect_pivot_offset = Vector2( 879, 536 )
theme = SubResource( 6 )
fit_content_height = true
script = ExtResource( 2 )

[node name="AnimationNode" type="Node2D" parent="."]
position = Vector2( -4, -7 )

[node name="TerminalAnimationPlayer" type="AnimationPlayer" parent="AnimationNode"]
root_node = NodePath("../..")
anims/MinimiseTerminal = SubResource( 4 )
anims/ShowTerminal = SubResource( 8 )

[node name="TerminalDisplay" type="RichTextLabel" parent="AnimationNode/TerminalAnimationPlayer"]
margin_left = 69.0
margin_top = 123.0
margin_right = 1235.0
margin_bottom = 728.0
rect_pivot_offset = Vector2( 1410, 854 )
theme = SubResource( 6 )
bbcode_enabled = true
script = ExtResource( 4 )

[node name="NetworkButton" type="Button" parent="."]
margin_left = 986.0
margin_top = 955.0
margin_right = 1186.0
margin_bottom = 1055.0
focus_mode = 0
enabled_focus_mode = 0
text = "Network"
script = ExtResource( 5 )

[node name="TerminalButton" type="Button" parent="."]
margin_left = 738.0
margin_top = 955.0
margin_right = 938.0
margin_bottom = 1055.0
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Terminal"
script = ExtResource( 5 )

[node name="OverlayNode" type="Node2D" parent="."]
z_index = 1

[node name="CoffeeOverlayDisplay" type="RichTextLabel" parent="OverlayNode"]
margin_left = 486.0
margin_top = 276.513
margin_right = 1536.0
margin_bottom = 702.513
script = ExtResource( 3 )

[node name="TaskContainer" parent="." instance=ExtResource( 6 )]

[node name="Network" parent="." instance=ExtResource( 7 )]

[connection signal="coffee_grabbed" from="." to="OverlayNode/CoffeeOverlayDisplay" method="_on_Desktop_coffee_grabbed"]
[connection signal="pressed" from="NetworkButton" to="." method="_on_NetworkButton_pressed"]
[connection signal="pressed" from="TerminalButton" to="." method="_on_TerminalButton_pressed"]
[connection signal="coffee_finished" from="OverlayNode/CoffeeOverlayDisplay" to="." method="_on_CoffeeOverlayDisplay_coffee_finished"]
[connection signal="hide" from="Network" to="." method="_on_Network_hide"]
